// <auto-generated />
using System;
using LeaveManagement.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace LeaveManagement.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    partial class ApplicationDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.13")
                .HasAnnotation("Relational:MaxIdentifierLength", 64);

            MySqlModelBuilderExtensions.AutoIncrementColumns(modelBuilder);

            modelBuilder.Entity("LeaveManagement.Domain.Entities.Department", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("department_code");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<bool>("IsActive")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_active");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("department_name");

                    b.Property<DateTimeOffset>("UpdatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("Code")
                        .IsUnique();

                    b.ToTable("departments", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.Designation", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("designation_code");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<bool>("IsActive")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_active");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("designation_name");

                    b.Property<DateTimeOffset>("UpdatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("Code")
                        .IsUnique();

                    b.ToTable("designations", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.Employee", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<string>("Department")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("department");

                    b.Property<string>("Designation")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("designation");

                    b.Property<string>("EmployeeCode")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("employee_code");

                    b.Property<string>("FullName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("varchar(200)")
                        .HasColumnName("full_name");

                    b.Property<Guid>("UserId")
                        .HasColumnType("char(36)")
                        .HasColumnName("user_id");

                    b.HasKey("Id");

                    b.HasIndex("EmployeeCode")
                        .IsUnique();

                    b.HasIndex("UserId")
                        .IsUnique();

                    b.ToTable("employees", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.Holiday", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<DateOnly>("Date")
                        .HasColumnType("date")
                        .HasColumnName("holiday_date");

                    b.Property<bool>("IsOptional")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_optional");

                    b.Property<string>("Location")
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("location");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("varchar(150)")
                        .HasColumnName("holiday_name");

                    b.HasKey("Id");

                    b.HasIndex("Date", "Location")
                        .IsUnique();

                    b.ToTable("holidays", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveBalance", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<decimal>("Adjustments")
                        .HasPrecision(8, 2)
                        .HasColumnType("decimal(8,2)")
                        .HasColumnName("adjustments");

                    b.Property<Guid>("EmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("employee_id");

                    b.Property<string>("LeaveTypeCode")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("leave_type_code");

                    b.Property<decimal>("OpeningBalance")
                        .HasPrecision(8, 2)
                        .HasColumnType("decimal(8,2)")
                        .HasColumnName("opening_balance");

                    b.Property<decimal>("Used")
                        .HasPrecision(8, 2)
                        .HasColumnType("decimal(8,2)")
                        .HasColumnName("used");

                    b.HasKey("Id");

                    b.HasIndex("EmployeeId", "LeaveTypeCode")
                        .IsUnique();

                    b.ToTable("leave_balances", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveRequest", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<decimal>("Days")
                        .HasPrecision(5, 2)
                        .HasColumnType("decimal(5,2)")
                        .HasColumnName("days");

                    b.Property<Guid>("EmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("employee_id");

                    b.Property<DateOnly>("EndDate")
                        .HasColumnType("date")
                        .HasColumnName("end_date");

                    b.Property<string>("LeaveTypeCode")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("leave_type_code");

                    b.Property<string>("Reason")
                        .IsRequired()
                        .HasMaxLength(1000)
                        .HasColumnType("varchar(1000)")
                        .HasColumnName("reason");

                    b.Property<DateOnly>("StartDate")
                        .HasColumnType("date")
                        .HasColumnName("start_date");

                    b.Property<int>("Status")
                        .HasColumnType("int")
                        .HasColumnName("status");

                    b.HasKey("Id");

                    b.HasIndex("EmployeeId");

                    b.ToTable("leave_requests", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveRequestApproval", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("action");

                    b.Property<DateTimeOffset>("ActionedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("actioned_at_utc");

                    b.Property<int>("ApprovalLevel")
                        .HasColumnType("int")
                        .HasColumnName("approval_level");

                    b.Property<Guid>("ApproverEmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("approver_employee_id");

                    b.Property<string>("Comment")
                        .HasMaxLength(1000)
                        .HasColumnType("varchar(1000)")
                        .HasColumnName("comment");

                    b.Property<Guid>("LeaveRequestId")
                        .HasColumnType("char(36)")
                        .HasColumnName("leave_request_id");

                    b.HasKey("Id");

                    b.HasIndex("ApproverEmployeeId");

                    b.HasIndex("LeaveRequestId");

                    b.ToTable("leave_request_approvals", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveTypeMaster", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("varchar(50)")
                        .HasColumnName("leave_code");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<bool>("IsActive")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_active");

                    b.Property<bool>("IsBackdatedAllowed")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_backdated_allowed");

                    b.Property<bool>("IsHalfDayAllowed")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_half_day_allowed");

                    b.Property<bool>("IsPaid")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_paid");

                    b.Property<decimal?>("MaxDaysPerRequest")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)")
                        .HasColumnName("max_days_per_request");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("varchar(100)")
                        .HasColumnName("leave_name");

                    b.Property<bool>("RequiresAttachment")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("requires_attachment");

                    b.Property<DateTimeOffset>("UpdatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("Code")
                        .IsUnique();

                    b.ToTable("leave_types", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.ReportingHierarchy", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<Guid>("EmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("employee_id");

                    b.Property<Guid?>("Level1ApproverEmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("level1_approver_employee_id");

                    b.Property<Guid?>("Level2ApproverEmployeeId")
                        .HasColumnType("char(36)")
                        .HasColumnName("level2_approver_employee_id");

                    b.HasKey("Id");

                    b.HasIndex("EmployeeId")
                        .IsUnique();

                    b.HasIndex("Level1ApproverEmployeeId");

                    b.HasIndex("Level2ApproverEmployeeId");

                    b.ToTable("reporting_hierarchies", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.User", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("char(36)")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("datetime(6)")
                        .HasColumnName("created_at_utc");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("varchar(255)")
                        .HasColumnName("email");

                    b.Property<bool>("IsActive")
                        .HasColumnType("tinyint(1)")
                        .HasColumnName("is_active");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("varchar(500)")
                        .HasColumnName("password_hash");

                    b.HasKey("Id");

                    b.HasIndex("Email")
                        .IsUnique();

                    b.ToTable("users", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.UserRoleAssignment", b =>
                {
                    b.Property<Guid>("UserId")
                        .HasColumnType("char(36)")
                        .HasColumnName("user_id");

                    b.Property<int>("RoleCode")
                        .HasColumnType("int")
                        .HasColumnName("role_code");

                    b.HasKey("UserId", "RoleCode");

                    b.ToTable("user_roles", (string)null);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.Employee", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.User", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveBalance", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("EmployeeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveRequest", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("EmployeeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.LeaveRequestApproval", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("ApproverEmployeeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("LeaveManagement.Domain.Entities.LeaveRequest", null)
                        .WithMany()
                        .HasForeignKey("LeaveRequestId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.ReportingHierarchy", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("EmployeeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("Level1ApproverEmployeeId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.HasOne("LeaveManagement.Domain.Entities.Employee", null)
                        .WithMany()
                        .HasForeignKey("Level2ApproverEmployeeId")
                        .OnDelete(DeleteBehavior.Restrict);
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.UserRoleAssignment", b =>
                {
                    b.HasOne("LeaveManagement.Domain.Entities.User", "User")
                        .WithMany("RoleAssignments")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("LeaveManagement.Domain.Entities.User", b =>
                {
                    b.Navigation("RoleAssignments");
                });
#pragma warning restore 612, 618
        }
    }
}
